Meu Primeiro Portifólio

--- a/Código/02 - Projeto Pessoal/css/global.css
+++ b/Código/02 - Projeto Pessoal/css/global.css
@@ -17,3 +17,29 @@ img{
   max-width: 100%;
   display: block;
 }
+.container{
+  max-width: 1200px;
+  padding: 40px 20px;
+  margin: 0 auto;
+  display: grid;
+}
+.subtitulo{
+  font-size: 7.5rem;
+  line-height: 1;
+  text-transform: uppercase;
+  word-break: break-all;
+  max-width: 5ch;
+}
+@media (max-width: 1100px){
+  .subtitulo{
+    font-size: 6rem;
+  }
+}
+@media (max-width: 800px){
+  .subtitulo{
+    font-size: 3rem;
+    text-transform: capitalize;
+    max-width: initial;
+
+  }
+}
