Adcionando partes de bicicleta, termos e seguros

--- a/Código/03 - bikcraft/css/style.css
+++ b/Código/03 - bikcraft/css/style.css
@@ -17,9 +17,19 @@
 
  /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+
+ /* Bicicletas - individuais */
+ @import "./bicicleta/bicicleta.css";
+ 
 
  /* Seguros */
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+
+ /* Termos */
+@import "./termos/termos.css";
 
 
 
