--- a/Código/03 - bikcraft/css/global/global.css
+++ b/Código/03 - bikcraft/css/global/global.css
@@ -1,29 +1,35 @@
-body{
+body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
- }
- h1, ul, p, h3, h2, blockquote{
+}
+h1,
+ul,
+p,
+h3,
+h2,
+blockquote,
+dd {
   margin: 0px;
- }
+}
 
- ul{
+ul {
   list-style: none;
   padding: 0px;
- }
- 
- a{
+}
+
+a {
   text-decoration: none;
   color: inherit;
- }
- img{
+}
+img {
   max-width: 100%;
   height: auto;
   display: block;
- } 
- img {
+}
+img {
   overflow-clip-margin: content-box;
   overflow: clip;
 }
- img[src$=".jpg"]{
+img[src$=".jpg"] {
   border-radius: 5px;
- }
+}
