--- a/Código/03 - bikcraft/css/utilidades/componentes.css
+++ b/Código/03 - bikcraft/css/utilidades/componentes.css
@@ -31,7 +31,22 @@
 .botao.secundario:hover{
   background: var(--c11);
 }
-
+.botao.seta{
+  display: flex;
+  align-items: center;
+}
+.botao.seta::after{
+  content: "";
+  display: inline-block;
+  width: 17px;
+  height: 12px;
+  margin-left: 12px;
+  background: url(../../img/icones/dec/seta-botão.svg);
+  transition: transform 0.3s;
+}
+.botao.seta:hover::after{
+  transform: translateX(4px);
+}
 
 .link{
   display: inline-block;
@@ -57,11 +72,36 @@
 
 
 
-
-
 @media (max-width: 600px){
   .botao{
     padding: 12px 16px;
     font-size: 1rem;
+  }
+}
+
+
+
+
+
+/* Titulos internos */
+.titulo-bg{
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--c13);
+}
+
+.titulo p{
+  margin-bottom: 4px;
+}
+
+@media (max-width:800px){
+  .titulo-bg{
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .titulo p{
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
   }
 }
