--- a/Código/03 - bikcraft/css/home/introducao.css
+++ b/Código/03 - bikcraft/css/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg{
-  background-color: var(--c14);
+  background: var(--c14);
   color: var(--w);
   box-shadow: inset 0 -120px var(--w);
 }
