--- a/Código/03 - bikcraft/css/style.css
+++ b/Código/03 - bikcraft/css/style.css
@@ -8,6 +8,7 @@
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -29,8 +30,16 @@
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
 
+ /* Contato */
+ @import "./contato/contato.css";
+ @import "./contato/lojas.css";
+  
+/* Termos */
+@import "./orçamento/orçamento.css";
+
  /* Termos */
 @import "./termos/termos.css";
+
 
 
 
