--- a/Código/03 - bikcraft/css/utilidades/componentes.css
+++ b/Código/03 - bikcraft/css/utilidades/componentes.css
@@ -18,6 +18,8 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   font: 600 1.125rem/1.33 "Poppins", sans-serif;
   max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 .botao:hover{
   background: linear-gradient(#e9ad0a, #e79609);
