--- a/Código/03 - bikcraft/css/global/header.css
+++ b/Código/03 - bikcraft/css/global/header.css
@@ -19,6 +19,7 @@
   display: inline-block;
   padding: 16px 0px;
   position: relative;
+  
 }
 .header-menu a::after{
   content: "";
@@ -28,8 +29,10 @@
   background-color: var(--p1);
   margin-top: 4px;
   position: absolute;
-}
-.header-menu a:hover::after{
-  width: 100%;
   transition: 0.3s;
+  
+}
+.header-menu a:hover::after,
+.header-menu a.active::after{
+  width: 100%;
 }
