--- a/Código/03 - bikcraft/css/seguros/perguntas.css
+++ b/Código/03 - bikcraft/css/seguros/perguntas.css
@@ -16,31 +16,48 @@
   background-color: var(--c1);
 }
 
-.perguntas dt{
+.perguntas button{
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
+  cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
-.perguntas dt::before{
+.perguntas button::before{
   content: "";
   display: inline-block;
   width: 4px;
   height: 20px;
   background-color: var(--p1);
 }
-.perguntas dt::after{
+.perguntas button::after{
   content: "";
   display: inline-block;
   width: 12px;
   height: 7px;
   background: url(../../img/icones/dec/detalhe-setinha.svg);
+  transition: 0.3s;
 }
+.perguntas button[aria-expanded="true"]::after{
+  transform: rotate(180deg);
+}
+.js .perguntas dd{
+  display: none;
+}
+.js .perguntas dd.ativa{
+  display: block;
+}
+
 .perguntas dd{
   padding-left: 12px;
   padding-top: 16px;
   max-width: 80ch;
 }
+
 
 @media (max-width:800px){
   .perguntas{
