Adicionando Tooltip, modal e dataset

--- a/Código/06- Animais-Fantásticos/css/conteudo/faq.css
+++ b/Código/06- Animais-Fantásticos/css/conteudo/faq.css
@@ -32,19 +32,19 @@
 }
 
 
-.js .js-accordion dd{
+.js [data-anime="accordion"] dd{
   display: none;
   
 }
-.js-accordion dd.ativo{
+[data-anime="accordion"] dd.ativo{
   display: block;
   animation: slideDown .5s forwards;
 }
-.js-accordion dt::after{
+[data-anime="accordion"] dt::after{
   content: "⮯";
   margin-left: 10px;
 }
-.js-accordion dt.ativo::after{
+[data-anime="accordion"] dt.ativo::after{
   content: "⮭";
 }
 
