--- a/Código/06- Animais-Fantásticos/css/style.css
+++ b/Código/06- Animais-Fantásticos/css/style.css
@@ -6,6 +6,8 @@
 @import './conteudo/faq.css';
 @import './conteudo/contato.css';
 @import './conteudo/footer.css';
+@import './conteudo/modal.css';
+@import './conteudo/tooltip.css';
 
 
 
