--- a/Código/06- Animais-Fantásticos/css/conteudo/contato.css
+++ b/Código/06- Animais-Fantásticos/css/conteudo/contato.css
@@ -19,6 +19,13 @@
   background-color: var(--p1);
 }
 
+.btc-preco{
+  background-color: #3f4;
+  padding: .2rem .5rem;
+  font-weight: bold;
+  border-radius: 2px;
+}
+
 @media(max-width: 700px){
   .dados, .mapa{
     grid-column: 1 / 3;
