--- a/Código/06- Animais-Fantásticos/css/style.css
+++ b/Código/06- Animais-Fantásticos/css/style.css
@@ -6,8 +6,12 @@
 @import './conteudo/faq.css';
 @import './conteudo/contato.css';
 @import './conteudo/footer.css';
-@import './conteudo/modal.css';
-@import './conteudo/tooltip.css';
+@import './interacoes/modal.css';
+@import './interacoes/tooltip.css';
+@import './interacoes/dropdown-menu.css';
+@import './interacoes/menu-mobile.css';
+@import './interacoes/numeros.css';
+@import './interacoes/horario.css';
 
 
 
